Adding OpenCV basic application to the project

--- a/Sudoku_Solver/Sudoku_Solver.vcxproj
+++ b/Sudoku_Solver/Sudoku_Solver.vcxproj
@@ -78,6 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Users\Andrzej\Documents\OpenCV\opencv\build\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Andrzej\Documents\OpenCV\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -117,6 +119,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opencv_world341d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -208,6 +211,7 @@
     <None Include="res\Sudoku_Solver.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\Eiasr_Sudoku_Solver_temp\Eiasr_Sudoku_Solver\image.png" />
     <Image Include="res\Sudoku_Solver.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
