--- a/Sudoku_Solver/Sudoku_Solver.vcxproj.filters
+++ b/Sudoku_Solver/Sudoku_Solver.vcxproj.filters
@@ -59,5 +59,8 @@
     <Image Include="res\Sudoku_Solver.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\..\Eiasr_Sudoku_Solver_temp\Eiasr_Sudoku_Solver\image.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
