--- a/Sudoku_Solver/Sudoku_Solver.vcxproj
+++ b/Sudoku_Solver/Sudoku_Solver.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SudokuImageReader.h" />
     <ClInclude Include="SudokuProblemSolver.h" />
+    <ClInclude Include="SudokuSolver.h" />
     <ClInclude Include="Sudoku_Solver.h" />
     <ClInclude Include="Sudoku_SolverDlg.h" />
     <ClInclude Include="targetver.h" />
@@ -213,6 +214,7 @@
     </ClCompile>
     <ClCompile Include="SudokuImageReader.cpp" />
     <ClCompile Include="SudokuProblemSolver.cpp" />
+    <ClCompile Include="SudokuSolver.cpp" />
     <ClCompile Include="Sudoku_Solver.cpp" />
     <ClCompile Include="Sudoku_SolverDlg.cpp" />
   </ItemGroup>
