--- a/Sudoku_Solver/Sudoku_Solver.vcxproj.filters
+++ b/Sudoku_Solver/Sudoku_Solver.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="PossibilitiesForAField.h">
       <Filter>SudokuProblemSolving</Filter>
     </ClInclude>
+    <ClInclude Include="SudokuProblemGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sudoku_Solver.cpp">
@@ -91,6 +94,9 @@
     </ClCompile>
     <ClCompile Include="PossibilitiesForAField.cpp">
       <Filter>SudokuProblemSolving</Filter>
+    </ClCompile>
+    <ClCompile Include="SudokuProblemGenerator.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
